<resources>
    <string name="app_name">OneClickBought</string>
    <string name="title_home">Home</string>
    <string name="title_maps">Maps</string>
    <string name="text_about">About</string>
    <string name="text_email">E-mail</string>
    <string name="text_email_confirmation">Confirm your e-mail</string>
    <string name="text_password">Password</string>
    <string name="text_password_confirmation">Confirm your password</string>
    <string name="text_login_login">Login</string>
    <string name="text_login_register">Register</string>
    <string name="text_version">Version 1.0 [Android]</string>
    <string name="text_business_load">Tech Lead | Developer</string>
    <string name="text_developed">Developed by Victor Hugo Garcia da Silva</string>
    <string name="text_developer_name">Victor Hugo</string>
    <string name="text_auth_failed">Authentication failed</string>
    <string name="text_login_or_password_is_empty">Fill in the fields correctly</string>
    <string name="text_logout">Logout</string>
    <string name="text_help_password">* Minimum of 6 characters</string>
    <string name="text_password_is_empty">Please type password and password confirmation</string>
    <string name="text_password_different">The password need be equals password confirmation</string>
    <string name="text_email_is_empty">Please type email and email confirmation</string>
    <string name="text_email_different">The email need be equals email confirmation</string>
    <string name="text_developer_phone_number">(011) 96400–0798</string>
    <string name="text_permission_required_to_call">Permission required to call</string>
    <string name="text_contact_us">Contact me by the number below:</string>
    <string name="text_delete_product">Delete</string>
    <string name="text_empty_list">Empty products list</string>
    <string name="text_product_name">Product name</string>
    <string name="text_product_description">Product description</string>
    <string name="text_add">Add</string>
    <string name="text_request_permission_for_camera">Permission required to take a picture</string>
    <string name="text_select_image">Select an image</string>
    <string name="text_location_permission_required">Permission required to save product location</string>
    <string name="text_location_permission_granted">Now you can save the product</string>
    <string name="text_all_fields_required">All fields are required</string>
    <string name="text_edit_product">Edit</string>
    <string name="text_error_update_product">We have an error to update the product</string>
    <string name="text_loading_button">Loading…</string>
    <string name="text_share_profile">Share developer profile</string>

</resources>
