<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_25_dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivPhotoEdit"
        android:layout_width="@dimen/default_150_dp"
        android:layout_height="@dimen/default_150_dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_empty_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_select_image"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_25_dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiProductNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_product_name"
            android:inputType="text"
            android:textColor="@color/colorBlack" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_10_dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiProductDescriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_product_description"
            android:inputType="textMultiLine"
            android:lines="7"
            android:textColor="@color/colorBlack" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btEdit"
        android:layout_width="@dimen/default_100_dp"
        android:layout_height="@dimen/default_50_dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_25_dp"
        android:background="@drawable/default_button_round_corners"
        android:hint="@string/text_edit_product"
        android:textColorHint="@color/text_view_default_text_color" />

</LinearLayout>