<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/default_10_dp">

        <android.support.v7.widget.CardView
            style="@style/CardViewMargedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_10_dp"
            app:cardElevation="@dimen/default_6_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/default_100_dp"
                    android:layout_height="@dimen/default_100_dp"
                    android:layout_marginTop="@dimen/default_20_dp"
                    android:src="@drawable/eye_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_20_dp"
                    android:text="@string/text_version" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardViewMargedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/default_6_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_10_dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/default_100_dp"
                    android:layout_height="@dimen/default_100_dp"
                    android:layout_marginTop="@dimen/default_20_dp"
                    android:src="@drawable/victor_perfil" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_10_dp"
                    android:layout_marginTop="@dimen/default_10_dp"
                    android:gravity="center"
                    android:text="@string/text_developed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_contact_us" />

                <TextView
                    android:id="@+id/tvDeveloperPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/default_20_dp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    tools:text="@string/text_developer_phone_number" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvDevelopedBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_10_dp"
                    android:background="@drawable/custom_retangular"
                    android:padding="@dimen/default_2_dp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btShare"
            style="@style/CardViewMargedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_borders_edit"
            android:text="@string/text_share_profile"
            android:textColor="@color/text_view_default_text_color" />

        <Button
            android:id="@+id/btLogout"
            style="@style/CardViewMargedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_button_logout_round_corners"
            android:text="@string/text_logout"
            android:textColor="@color/text_view_default_text_color" />

    </LinearLayout>

</ScrollView>