<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/ivEyeLogo"
        android:layout_width="@dimen/splash_logo_size"
        android:layout_height="@dimen/splash_logo_size"
        android:layout_gravity="center"
        app:srcCompat="@drawable/eye_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_25_dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/tiColors">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_view_default_text_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/tiColors">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:textColor="@color/text_view_default_text_color" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_60_dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btLogin"
            android:layout_width="@dimen/default_200_dp"
            android:layout_height="@dimen/default_50_dp"
            android:background="@drawable/default_button_round_corners"
            android:hint="@string/text_login_login"
            android:onClick="doLogin"
            android:textColorHint="@color/text_view_default_text_color" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_25_dp"
            android:text="@string/text_login_register"
            android:textColor="@color/text_view_default_text_color" />

    </LinearLayout>

</LinearLayout>